fix(Web): Make secondary color a bit brighter in dark mode

--- a/apps/web/styles/global.css
+++ b/apps/web/styles/global.css
@@ -22,7 +22,7 @@
 }
 
 .text-secondary {
-  @apply text-gray-700 dark:text-gray-400;
+  @apply text-gray-700 dark:text-gray-300;
 }
 
 .prose img {
